Add reST params/return values for Socket class.
kaa sphinx extension improvements:

 - new object hierarchy diagram (inverted to allow for MI) in synopsis section
 - new options: inherited-members (flag), inherited-signls (flag), add-members
   remove-members, add-signals, remove-signals (comma-separated lists).


git-svn-id: svn://svn.freevo.org/kaa/trunk@3772 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/doc/_static/kaa.css
+++ b/base/doc/_static/kaa.css
@@ -1,4 +1,4 @@
-table.kaa {
+table.kaa.synopsis {
     border-top: 1px solid #c69f71;
     border-bottom: 1px solid #c69f71;
     width: 95%;
@@ -8,12 +8,27 @@ table.kaa {
     margin-bottom: 1em;
 }
 
-table.kaa th {
+table.kaa.synopsis th{
+
     white-space: nowrap;
     border-bottom: 1px solid #e7d0b5;
 }
 
-table.kaa td {
+table.kaa.synopsis td {
     width: 100%;
     border-bottom: 1px solid #e7d0b5;
+}
+
+p.hierarchy {
+        padding-left: 1em;
+}
+
+p.hierarchy .current {
+    background-color: #cfe3ff;
+    padding: 2px;
+    font-weight: normal;
+}
+
+p.hierarchy tt {
+    font-weight: normal;
 }
