Include property read/write status in properties synopsis table.
git-svn-id: svn://svn.freevo.org/kaa/trunk@3776 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/doc/_static/kaa.css
+++ b/base/doc/_static/kaa.css
@@ -11,12 +11,21 @@ div.kaa.synopsis table {
 div.kaa.synopsis th {
     white-space: nowrap;
     border-bottom: 1px solid #efddc8;
-    padding-right: 2em;
+    padding-right: 1em;
+    vertical-align: top;
 }
 
 div.kaa.synopsis td {
-    width: 100%;
     border-bottom: 1px solid #efddc8;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    vertical-align: top;
+}
+
+div.kaa.synopsis td.desc {
+    padding-left: 1em;
+    width: 100%;
+    vertical-align: top;
 }
 
 div.kaa.synopsis p {
