Import bug fix and slight cosmetic tweak
git-svn-id: svn://svn.freevo.org/kaa/trunk@3778 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/doc/_static/kaa.css
+++ b/base/doc/_static/kaa.css
@@ -20,6 +20,7 @@ div.kaa.synopsis td {
     padding-left: 0.5em;
     padding-right: 0.5em;
     vertical-align: top;
+    white-space: nowrap;
 }
 
 div.kaa.synopsis td.desc {
