Allow multiline warnings.
git-svn-id: svn://svn.freevo.org/kaa/trunk@4147 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/doc/_static/kaa.css
+++ b/base/doc/_static/kaa.css
@@ -62,3 +62,12 @@ dl.class > dt:first-child {
 dt:target, .highlight {
     background-color: #fbe54e !important;
 }
+
+/* Allow multiline warnings */
+div.warning p.first {
+    margin: 0px 0px;
+}
+
+div.warning p {
+    margin: 0.7em 0 0.7em 0;
+}   
