If synopsis section has no members, don't output <table> element; add style for 'nomember' div.
git-svn-id: svn://svn.freevo.org/kaa/trunk@4150 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/doc/_static/kaa.css
+++ b/base/doc/_static/kaa.css
@@ -51,6 +51,12 @@ div.kaa.synopsis div.heading {
 
 }
 
+div.kaa.synopsis div.nomembers {
+    font-style: italic;
+    color: #666;
+    padding-bottom: 1em;
+}
+
 dl.class > dt:first-child {
     font-size: 105%;
     border: 1px solid #dbb1ea;
